--- a/mobile/src/pages/sorgenti/sorgenti.html
+++ b/mobile/src/pages/sorgenti/sorgenti.html
@@ -1,1 +1,8 @@
-<h1>SORGENTI</h1>
+<ion-header>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>{{title}}</ion-title>
+    </ion-navbar>
+</ion-header>
