--- a/mobile/src/pages/elementList/elementList.html
+++ b/mobile/src/pages/elementList/elementList.html
@@ -3,7 +3,9 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>{{title}}</ion-title>
+        <ion-title>
+            <ion-icon name="home"></ion-icon> {{title}}
+        </ion-title>
     </ion-navbar>
 </ion-header>
 
