--- a/mobile/src/pages/sorgenti/sorgenti.html
+++ b/mobile/src/pages/sorgenti/sorgenti.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>{{title}}</ion-title>
+        <ion-title>{{'Sources' | translate}}</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
 <ion-content>
     <ion-list>
       <button ion-item *ngFor="let source of sourceType" (click)="onSelect(source)">
-        {{source.name}}
+        {{source.name}} <ion-badge item-end>{{source.count}}</ion-badge>
       </button>  
     </ion-list>
 </ion-content>
