--- a/mobile/src/pages/temi/temi.html
+++ b/mobile/src/pages/temi/temi.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>{{title}}</ion-title>
+        <ion-title>{{'Themes' | translate}}</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
 <ion-content>
     <ion-list>
       <button ion-item *ngFor="let theme of themeType" (click)="onSelect(theme)">
-        {{theme.name}}
+        {{theme.name}} <ion-badge item-end>{{theme.count}}</ion-badge>
       </button>  
     </ion-list>
 </ion-content>
