--- a/mobile/src/index.html
+++ b/mobile/src/index.html
@@ -24,7 +24,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/assets/css/leaflet.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/leaflet.css">
 
 </head>
 <body>
