Aggiunta di calendarEvents

--- a/mobile/src/pages/elementDetails/elementDetails.html
+++ b/mobile/src/pages/elementDetails/elementDetails.html
@@ -8,5 +8,6 @@
     <p class="tag"><ion-icon name="bookmark"></ion-icon>{{event.tags}}</p>
     <span class="source">da {{event.source}}</span>
     <p>{{event.description}}</p>
+    {{dateEvent}}
     
 </ion-content>
