Rimossa opzione di ricerca per mappa e calendario

--- a/mobile/src/pages/elementList/elementList.html
+++ b/mobile/src/pages/elementList/elementList.html
@@ -7,7 +7,7 @@
             {{title}}        
         </ion-title>
         <ion-buttons end>
-            <button ion-button (click)='toggleSearch()'>
+            <button ion-button *ngIf="view=='lista'" (click)='toggleSearch()'>
                 <ion-icon *ngIf="!searching" name="search"></ion-icon>
                 <ion-icon *ngIf="searching" name="close-circle"></ion-icon>
             </button>
