--- a/mobile/src/pages/elementList/elementList.html
+++ b/mobile/src/pages/elementList/elementList.html
@@ -23,6 +23,12 @@
 <ion-content>
     <div [ngSwitch]="view" style="height: 100%; width: 100%">
         <div *ngSwitchCase="'lista'" style="height: 100%; width: 100%">
+            <div *ngIf="mainEvents.length==0"> 
+                <h2>Non sono stati trovati eventi corrispondenti ai tuoi filtri</h2>
+                <button ion-button (click)="goBack()">
+                    OK
+                </button>
+            </div>
             <ion-list mode="md">
                 <ion-item *ngFor="let event of mainEvents" (click)="onSelect(event)">
                     <ion-thumbnail item-start>
