--- a/mobile/src/pages/elementDetails/elementDetails.html
+++ b/mobile/src/pages/elementDetails/elementDetails.html
@@ -1,6 +1,12 @@
 <ion-header>
     <ion-navbar color="primary">
         <ion-title>{{!!event ? event.title : ''}}</ion-title>
+        <ion-buttons end>
+          <button ion-button (click)="addFav(event)">
+            <ion-icon *ngIf="isFav" name="star"></ion-icon>
+            <ion-icon *ngIf="!isFav" name="star-outline"></ion-icon>
+          </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
