--- a/mobile/src/pages/sorgenti/sorgenti.html
+++ b/mobile/src/pages/sorgenti/sorgenti.html
@@ -10,8 +10,17 @@
 
 <ion-content>
     <ion-list>
-      <button ion-item *ngFor="let source of sourceType" (click)="onSelect(source)">
-        {{source.name}} <ion-badge item-end>{{source.count}}</ion-badge>
-      </button>  
+        <ion-item *ngFor="let source of sourceType" (click)="onSelect(source)">
+            {{source.name}} 
+            <ion-badge item-end class="fav">
+                <button ion-button (click)="addFav(source)">
+                    <ion-icon *ngIf="source.fav" name="star"></ion-icon>
+                    <ion-icon *ngIf="!source.fav" name="star-outline"></ion-icon>
+                </button>
+            </ion-badge>
+            <ion-badge item-end>
+                {{source.count}}
+            </ion-badge>
+        </ion-item>  
     </ion-list>
 </ion-content>
