--- a/mobile/src/pages/favorites/favorites.html
+++ b/mobile/src/pages/favorites/favorites.html
@@ -25,11 +25,33 @@
                 </button>
             </ion-item-options>
         </ion-item-sliding>
-        <ion-item *ngFor="let source of sourceFavList">
-            {{source.name}} 
-            <ion-badge item-end>
-                {{source.count}}
-            </ion-badge>
-        </ion-item>
+
+        <ion-item-sliding *ngFor="let source of sourceFavList">
+            <ion-item (click)="onSelectSource(source)">
+                {{source.name}} 
+                <ion-badge item-end>
+                    {{source.count}}
+                </ion-badge>
+            </ion-item>
+            <ion-item-options>
+                <button ion-button color="danger" (click)="removeSource(source)">
+                    <ion-icon name="trash"></ion-icon>
+                </button>
+            </ion-item-options>
+        </ion-item-sliding>
+        
+        <ion-item-sliding *ngFor="let theme of themesFavList">
+            <ion-item (click)="onSelectTheme(theme)">
+                {{theme.name}} 
+                <ion-badge item-end>
+                    {{theme.count}}
+                </ion-badge>
+            </ion-item>
+            <ion-item-options>
+                <button ion-button color="danger" (click)="removeTheme(theme)">
+                    <ion-icon name="trash"></ion-icon>
+                </button>
+            </ion-item-options>
+        </ion-item-sliding>
     </ion-list>
 </ion-content>
