--- a/mobile/src/pages/favorites/favorites.html
+++ b/mobile/src/pages/favorites/favorites.html
@@ -9,49 +9,59 @@
 
 <ion-content>
     <ion-list>
-        <ion-item-sliding *ngFor="let event of favList">
-            <ion-item (click)="onSelect(event)">
-                <ion-thumbnail item-start>
-                    <img *ngIf="event.image" src={{event.image}}>
-                    <img *ngIf="!event.image" src='assets/icon/comune.jpeg'>
-                </ion-thumbnail>
-                <h2>{{event.title}}</h2>
-                <p class="pubb">Pubblicato il: <span class="crea">{{event.createdDate | date: 'dd/MM/yyyy'}}</span></p>
-            </ion-item>
-            <ion-item-options>
-                <button ion-button color="danger" (click)="remove(event)">
-                    <ion-icon name="trash"></ion-icon>
-                    DELETE
-                </button>
-            </ion-item-options>
-        </ion-item-sliding>
+        <ion-item-divider color="date" (click)="popEvent()">
+            Eventi preferiti <ion-icon *ngIf="!eventPop" name="arrow-dropup"></ion-icon> <ion-icon *ngIf="eventPop" name="arrow-dropdown"></ion-icon>
+            <ion-item-sliding *ngFor="let event of favList">
+                <ion-item *ngIf="eventPop" class="noborder" (click)="onSelect(event)">
+                    <ion-thumbnail item-start>
+                        <img *ngIf="event.image" src={{event.image}}>
+                        <img *ngIf="!event.image" src='assets/icon/comune.jpeg'>
+                    </ion-thumbnail>
+                    <h2>{{event.title}}</h2>
+                    <p class="pubb">Pubblicato il: <span class="crea">{{event.createdDate | date: 'dd/MM/yyyy'}}</span></p>
+                </ion-item>
+                <ion-item-options>
+                    <button ion-button color="danger" (click)="remove(event)">
+                        <ion-icon name="trash"></ion-icon>
+                        DELETE
+                    </button>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-item-divider>
 
-        <ion-item-sliding *ngFor="let source of sourceFavList">
-            <ion-item (click)="onSelectSource(source)">
-                {{source.name}} 
-                <ion-badge item-end>
-                    {{source.count}}
-                </ion-badge>
-            </ion-item>
-            <ion-item-options>
-                <button ion-button color="danger" (click)="removeSource(source)">
-                    <ion-icon name="trash"></ion-icon>
-                </button>
-            </ion-item-options>
-        </ion-item-sliding>
+        <ion-item-divider color="date" (click)="popSource()">
+            Sorgenti preferite <ion-icon *ngIf="!sourcePop" name="arrow-dropup"></ion-icon> <ion-icon *ngIf="sourcePop" name="arrow-dropdown"></ion-icon>
+            <ion-item-sliding *ngFor="let source of sourceFavList">
+                <ion-item *ngIf="sourcePop" class="noborder" (click)="onSelectSource(source)">
+                    {{source.name}} 
+                    <ion-badge item-end>
+                        {{source.count}}
+                    </ion-badge>
+                </ion-item>
+                <ion-item-options>
+                    <button ion-button color="danger" (click)="removeSource(source)">
+                        <ion-icon name="trash"></ion-icon>
+                    </button>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-item-divider>
+            
+        <ion-item-divider color="date" (click)="popTheme()">
+            Temi preferiti <ion-icon *ngIf="!themePop" name="arrow-dropup"></ion-icon> <ion-icon *ngIf="themePop" name="arrow-dropdown"></ion-icon>
+            <ion-item-sliding  *ngFor="let theme of themesFavList">
+                <ion-item *ngIf="themePop" class="noborder" (click)="onSelectTheme(theme)">
+                    {{theme.name}} 
+                    <ion-badge item-end>
+                        {{theme.count}}
+                    </ion-badge>
+                </ion-item>
+                <ion-item-options>
+                    <button ion-button color="danger" (click)="removeTheme(theme)">
+                        <ion-icon name="trash"></ion-icon>
+                    </button>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-item-divider>
         
-        <ion-item-sliding *ngFor="let theme of themesFavList">
-            <ion-item (click)="onSelectTheme(theme)">
-                {{theme.name}} 
-                <ion-badge item-end>
-                    {{theme.count}}
-                </ion-badge>
-            </ion-item>
-            <ion-item-options>
-                <button ion-button color="danger" (click)="removeTheme(theme)">
-                    <ion-icon name="trash"></ion-icon>
-                </button>
-            </ion-item-options>
-        </ion-item-sliding>
     </ion-list>
 </ion-content>
