MOdifiche grafiche minori

--- a/mobile/src/pages/credits/credits.html
+++ b/mobile/src/pages/credits/credits.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div style="text-align:center">
-        <div class="col">
+        <div class="col cred">
             <p>{{'credit_info' | translate}}</p>
         </div>
     </div>
