--- a/mobile/src/pages/elementList/elementList.html
+++ b/mobile/src/pages/elementList/elementList.html
@@ -20,7 +20,7 @@
             </button>
             
             <button ion-button *ngIf="view=='lista' && isHome" (click)='toggleFilters()'>
-                <ion-icon name="funnel"></ion-icon>
+                <ion-icon name="ios-funnel"></ion-icon>
             </button>
             
             <button ion-button *ngIf="view=='lista' && isSor" (click)='addFav(source)'>
