--- a/mobile/src/pages/elementList/elementList.html
+++ b/mobile/src/pages/elementList/elementList.html
@@ -8,7 +8,7 @@
         </ion-title>
         <ion-buttons end>
             <button ion-button *ngIf="view=='calendario' && hasDate" (click)='removeDate()'>
-                <ion-label>Rimuovi modifiche</ion-label>
+                <ion-label>Annulla</ion-label>
                 <ion-icon name="close-circle"></ion-icon>
             </button>
             
@@ -43,8 +43,9 @@
 
 
 <ion-content>
-    <div [ngSwitch]="view" style="height: 100%; width: 100%">
+    <div [ngSwitch]="view" style="height: 100%; width: 100%">        
         <ion-searchbar #searchBox *ngIf="searching" (ionInput)="search(searchBox.value)"></ion-searchbar>
+        
         <div *ngSwitchCase="'lista'" style="height: 100%; width: 100%">
             <div *ngIf="mainEvents.length==0 && charged" class="error"> 
                 <h2>Non sono stati trovati eventi corrispondenti ai tuoi filtri</h2>
@@ -63,7 +64,7 @@
                     <p class="pubb">Pubblicato il: <span class="crea">{{event.createdDate | date: 'dd/MM/yyyy'}}</span></p>
                 </ion-item>
             </ion-list>
-            <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+            <ion-infinite-scroll *ngIf="enabled" (ionInfinite)="doInfinite($event)">
                 <ion-infinite-scroll-content 
                     loadingSpinner = "bubbles" 
                     loadingText = "Caricamento">
